--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "node-todo-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "API to manage todo lists, built with Express",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha server/**/*.test.js",
+    "test": "SET NODE_ENV=test&& mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "^6.2.2"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "api",
+    "todo list",
+    "nodejs"
+  ],
+  "author": "Diogo Cardoso",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.3.0",
