--- a/package.json
+++ b/package.json
@@ -2,37 +2,59 @@
   "name": "node-todo-api",
   "version": "1.0.0",
   "description": "API to manage todo lists, built with Express",
-  "main": "server/server.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node server/server.js",
-    "test": "SET NODE_ENV=test&& mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
-  },
-  "engines": {
-    "node": "^6.2.2"
+    "start": "cross-env NODE_ENV=production node dist/app.js",
+    "build": "babel src -d dist",
+    "dev": "cross-env NODE_ENV=development nodemon src/app.js --exec babel-node",
+    "test": "cross-env NODE_ENV=test jest --forceExit",
+    "test-watch": "cross-env NODE_ENV=test jest --watchAll",
+    "lint": "eslint src/**"
   },
   "keywords": [
     "api",
     "todo list",
     "nodejs"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nip10/node-course-2-todo-api.git"
+  },
   "author": "Diogo Cardoso",
-  "license": "ISC",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/nip10/node-course-2-todo-api/issues"
+  },
+  "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.15.2",
-    "crypto-js": "^3.1.8",
-    "express": "^4.14.0",
-    "jsonwebtoken": "^7.1.9",
-    "lodash": "^4.16.6",
-    "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9",
-    "validator": "^5.6.0"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.0",
+    "lodash": "^4.17.5",
+    "mongodb": "^3.0.5",
+    "mongoose": "^5.0.11",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
-    "expect": "^1.20.2",
-    "mocha": "^3.0.2",
-    "nodemon": "^1.10.2",
-    "supertest": "^2.0.0"
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.4",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.2",
+    "prettier": "^1.11.1",
+    "supertest": "^3.0.0"
+  },
+  "jest": {
+    "roots": [
+      "src/tests"
+    ]
   }
 }
