--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "cross-env NODE_ENV=production node dist/app.js",
     "build": "babel src -d dist",
     "dev": "cross-env NODE_ENV=development nodemon src/app.js --exec babel-node",
-    "test": "cross-env NODE_ENV=test jest --forceExit",
-    "test-watch": "cross-env NODE_ENV=test jest --watchAll",
+    "test": "cross-env NODE_ENV=test jest --env=node --forceExit",
+    "test-watch": "cross-env NODE_ENV=test jest --env=node --watchAll",
     "lint": "eslint src/**"
   },
   "keywords": [
@@ -28,29 +28,28 @@
   "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "crypto-js": "^3.1.9-1",
+    "body-parser": "^1.18.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
-    "jsonwebtoken": "^8.2.0",
-    "lodash": "^4.17.5",
-    "mongodb": "^3.0.5",
-    "mongoose": "^5.0.11",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.7",
     "validator": "^9.4.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.4",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "jest": "^22.4.3",
-    "nodemon": "^1.17.2",
-    "prettier": "^1.11.1",
-    "supertest": "^3.0.0"
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "jest": "^22.4.4",
+    "nodemon": "^1.18.3",
+    "prettier": "^1.14.2",
+    "supertest": "^3.1.0"
   },
   "jest": {
     "roots": [
