--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
   "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "node": "current"
-        },
-        "useBuiltIns": true
-      }
-    ]
+    "@babel/env",
+    "@babel/typescript"
+  ],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread"
+  ],
+  "ignore": [
+    "types"
   ]
 }
