--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "API to manage todo lists, built with Express",
   "main": "dist/app.js",
   "scripts": {
+    "build": "babel src -d dist -x \".ts,.tsx\" -i types",
     "start": "cross-env NODE_ENV=production node dist/app.js",
-    "build": "babel src -d dist",
-    "dev": "cross-env NODE_ENV=development nodemon src/app.js --exec babel-node",
-    "test": "cross-env NODE_ENV=test jest --env=node --forceExit",
-    "test-watch": "cross-env NODE_ENV=test jest --env=node --watchAll",
-    "lint": "eslint src/**"
+    "watch": "cross-env NODE_ENV=development concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-ts": "tsc -w",
+    "watch-node": "cross-env NODE_ENV=development nodemon dist/app.js",
+    "test": "cross-env NODE_ENV=test jest --forceExit --coverage --verbose",
+    "test-watch": "cross-env NODE_ENV=test npm run test -- --watchAll",
+    "debug": "npm run build && npm run debug-watch",
+    "debug-watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "debug-serve": "nodemon --inspect dist/app.js",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "keywords": [
     "api",
@@ -28,28 +33,47 @@
   "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.7",
-    "validator": "^9.4.1"
+    "validator": "^9.4.1",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/preset-typescript": "^7.0.0-rc.1",
+    "@types/bcryptjs": "^2.4.1",
+    "@types/bluebird": "^3.5.23",
+    "@types/body-parser": "^1.17.0",
+    "@types/dotenv": "^4.0.3",
+    "@types/express": "^4.16.0",
+    "@types/helmet": "0.0.38",
+    "@types/jest": "^23.3.1",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/lodash": "^4.14.116",
+    "@types/mongoose": "^5.2.5",
+    "@types/validator": "^9.4.1",
+    "@types/winston": "^2.3.9",
+    "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-prettier": "^2.6.2",
     "jest": "^22.4.4",
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "ts-jest": "^23.1.3",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "typescript": "^3.0.1"
   },
   "jest": {
     "roots": [
