--- a/package.json
+++ b/package.json
@@ -62,11 +62,12 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/lodash": "^4.14.116",
     "@types/mongoose": "^5.2.5",
+    "@types/supertest": "^2.0.5",
     "@types/validator": "^9.4.1",
     "@types/winston": "^2.3.9",
     "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
-    "jest": "^22.4.4",
+    "jest": "^23.5.0",
     "nodemon": "^1.18.3",
     "prettier": "^1.14.2",
     "supertest": "^3.1.0",
