--- a/package.json
+++ b/package.json
@@ -33,48 +33,47 @@
   "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "bluebird": "^3.5.1",
+    "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
-    "dotenv": "^5.0.1",
-    "express": "^4.16.3",
-    "helmet": "^3.13.0",
-    "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.10",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.1",
-    "mongoose": "^5.2.7",
-    "validator": "^9.4.1",
-    "winston": "^3.0.0"
+    "mongoose": "^5.3.15",
+    "validator": "^10.9.0",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.1",
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-typescript": "^7.0.0-rc.1",
-    "@types/bcryptjs": "^2.4.1",
-    "@types/bluebird": "^3.5.23",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.24",
     "@types/body-parser": "^1.17.0",
-    "@types/dotenv": "^4.0.3",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
-    "@types/helmet": "0.0.38",
+    "@types/helmet": "0.0.42",
     "@types/jest": "^23.3.1",
-    "@types/jsonwebtoken": "^7.2.8",
-    "@types/lodash": "^4.14.116",
-    "@types/mongoose": "^5.2.5",
-    "@types/supertest": "^2.0.5",
-    "@types/validator": "^9.4.1",
-    "@types/winston": "^2.3.9",
-    "concurrently": "^3.6.1",
+    "@types/jsonwebtoken": "^8.3.0",
+    "@types/lodash": "^4.14.119",
+    "@types/mongoose": "^5.3.3",
+    "@types/supertest": "^2.0.7",
+    "@types/validator": "^9.4.3",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.3",
-    "prettier": "^1.14.2",
-    "supertest": "^3.1.0",
-    "ts-jest": "^23.1.3",
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.7",
+    "prettier": "^1.15.3",
+    "supertest": "^3.3.0",
+    "ts-jest": "^23.1.5",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "typescript": "^3.0.1"
+    "tslint-config-prettier": "^1.17.0",
+    "typescript": "^3.2.1"
   },
   "jest": {
     "roots": [
