--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "baseUrl": ".",
     "paths": {
       "*": [
-        "node_modules/*",
-        "src/types/*"
+        "node_modules/*"
       ]
     }
   },
@@ -19,6 +18,7 @@
     "src/**/*"
   ],
   "files": [
-    "src/types/*"
+    "src/types/custom.d.ts",
+    "src/types/promise-bluebird.d.ts"
   ]
 }
