--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ notifications:
   email: false
 script:
 - npm run lint
-- npm run test
+- npm run test:coverage
 - npm run build
 before_install:
 - npm install
