--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-todo-api",
   "version": "1.0.0",
-  "description": "API to manage todo lists, built with Express",
+  "description": "A RESTful API to manage todos, with authentication.",
   "main": "dist/app.js",
   "scripts": {
     "build": "babel src -d dist -x \".ts,.tsx\" -i types",
@@ -34,47 +34,49 @@
   "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "bluebird": "^3.5.3",
-    "body-parser": "^1.18.3",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "helmet": "^3.16.0",
-    "jsonwebtoken": "^8.5.0",
+    "bluebird": "^3.5.5",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongodb": "^3.1.13",
-    "mongoose": "^5.4.19",
-    "validator": "^10.11.0",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.5.15",
+    "validator": "^11.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/bluebird": "^3.5.26",
+    "@types/bluebird": "^3.5.27",
     "@types/body-parser": "^1.17.0",
-    "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.1",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.0",
+    "@types/express-rate-limit": "^3.3.0",
     "@types/helmet": "0.0.43",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.14",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/lodash": "^4.14.123",
-    "@types/mongoose": "^5.3.22",
+    "@types/lodash": "^4.14.134",
+    "@types/mongoose": "^5.5.6",
     "@types/supertest": "^2.0.7",
-    "@types/validator": "^10.9.0",
+    "@types/validator": "^10.11.1",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
-    "jest": "^24.5.0",
-    "nodemon": "^1.18.10",
-    "prettier": "^1.16.4",
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
     "supertest": "^3.3.0",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.14.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.5.2"
   },
   "jest": {
     "roots": [
