--- a/package.json
+++ b/package.json
@@ -33,50 +33,50 @@
   },
   "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
-    "helmet": "^3.18.0",
+    "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.11",
-    "mongodb": "^3.2.7",
-    "mongoose": "^5.5.15",
-    "validator": "^11.0.0",
+    "lodash": "^4.17.15",
+    "mongodb": "^3.3.0",
+    "mongoose": "^5.6.10",
+    "validator": "^11.1.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.27",
-    "@types/body-parser": "^1.17.0",
+    "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.0",
-    "@types/express-rate-limit": "^3.3.0",
-    "@types/helmet": "0.0.43",
-    "@types/jest": "^24.0.14",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/lodash": "^4.14.134",
-    "@types/mongoose": "^5.5.6",
-    "@types/supertest": "^2.0.7",
-    "@types/validator": "^10.11.1",
-    "concurrently": "^4.1.0",
+    "@types/express": "^4.17.1",
+    "@types/express-rate-limit": "^3.3.2",
+    "@types/helmet": "0.0.44",
+    "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.3.3",
+    "@types/lodash": "^4.14.137",
+    "@types/mongoose": "^5.5.13",
+    "@types/supertest": "^2.0.8",
+    "@types/validator": "^10.11.3",
+    "concurrently": "^4.1.2",
     "cross-env": "^5.2.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
     "supertest": "^3.3.0",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.17.0",
+    "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   },
   "jest": {
     "roots": [
