--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,4 @@
 {
-  "presets": [
-    "@babel/env",
-    "@babel/typescript"
-  ],
-  "plugins": [
-    "@babel/proposal-class-properties",
-    "@babel/proposal-object-rest-spread"
-  ],
-  "ignore": [
-    "types"
-  ]
+  "presets": ["@babel/env", "@babel/preset-typescript"],
+  "plugins": []
 }
