--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "A RESTful API to manage todos, with authentication.",
   "main": "dist/app.js",
   "scripts": {
-    "build": "babel src -d dist -x \".ts,.tsx\" -i types",
+    "build": "babel ./src --out-dir dist --extensions \".ts\"",
     "start": "cross-env NODE_ENV=production node dist/app.js",
-    "watch": "cross-env NODE_ENV=development concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn run watch:ts\" \"yarn run watch:node\"",
-    "watch:ts": "tsc -w",
-    "watch:node": "cross-env NODE_ENV=development nodemon dist/app.js",
+    "watch": "cross-env NODE_ENV=development nodemon",
+    "debug": "cross-env NODE_ENV=development nodemon --config nodemon-debug.json",
+    "lint": "tsc --noEmit && eslint --fix .",
     "test": "cross-env NODE_ENV=test jest --forceExit",
     "test:coverage": "cross-env NODE_ENV=test jest --forceExit --coverage",
-    "test:watch": "cross-env NODE_ENV=test yarn run test -- --watchAll",
-    "debug": "yarn run build && yarn run debug-watch",
-    "debug:watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn run watch:ts\" \"yarn run debug:serve\"",
-    "debug:serve": "nodemon --inspect dist/app.js",
-    "lint": "tslint -c tslint.json -p tsconfig.json"
+    "test:watch": "cross-env NODE_ENV=test yarn run test --watchAll"
   },
   "keywords": [
     "api",
@@ -33,54 +29,53 @@
   },
   "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
-    "bcrypt": "^3.0.6",
-    "bluebird": "^3.7.0",
+    "bcrypt": "^3.0.8",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.0.0",
-    "helmet": "^3.21.1",
+    "express-rate-limit": "^5.1.1",
+    "helmet": "^3.21.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongodb": "^3.3.0",
-    "mongoose": "^5.6.10",
-    "validator": "^11.1.0",
+    "mongodb": "^3.5.4",
+    "mongoose": "^5.9.3",
+    "validator": "^12.2.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-typescript": "^7.8.3",
     "@types/bcrypt": "^3.0.0",
-    "@types/bluebird": "^3.5.27",
-    "@types/body-parser": "^1.17.1",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.17.1",
-    "@types/express-rate-limit": "^3.3.2",
-    "@types/helmet": "0.0.44",
-    "@types/jest": "^24.0.18",
-    "@types/jsonwebtoken": "^8.3.3",
-    "@types/lodash": "^4.14.137",
-    "@types/mongoose": "^5.5.13",
+    "@types/bluebird": "^3.5.30",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.2",
+    "@types/express-rate-limit": "^5.0.0",
+    "@types/helmet": "0.0.45",
+    "@types/jest": "^25.1.3",
+    "@types/jsonwebtoken": "^8.3.8",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^13.7.1",
+    "@types/mongoose": "^5.7.3",
     "@types/supertest": "^2.0.8",
-    "@types/validator": "^10.11.3",
-    "concurrently": "^4.1.2",
-    "cross-env": "^5.2.0",
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2",
-    "supertest": "^3.3.0",
-    "ts-jest": "^24.0.2",
-    "tslint": "^5.19.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.3"
-  },
-  "jest": {
-    "roots": [
-      "src/tests"
-    ]
+    "@types/validator": "^12.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "cross-env": "^7.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.8.3"
   }
 }
