--- a/package.json
+++ b/package.json
@@ -22,60 +22,57 @@
     "type": "git",
     "url": "git+https://github.com/nip10/node-course-2-todo-api.git"
   },
-  "author": "Diogo Cardoso",
+  "author": "Diogo Cardoso <hi@diogocardoso.dev>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/nip10/node-course-2-todo-api/issues"
   },
   "homepage": "https://github.com/nip10/node-course-2-todo-api#readme",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.1.3",
-    "helmet": "^4.1.1",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "mongodb": "^3.6.2",
-    "mongoose": "^5.10.7",
-    "validator": "^13.1.17",
+    "lodash": "^4.17.21",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.5",
+    "validator": "^13.6.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.1",
-    "@types/bcrypt": "^3.0.0",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/bcrypt": "^3.0.1",
     "@types/bluebird": "^3.5.33",
-    "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.17.8",
-    "@types/express-rate-limit": "^5.1.0",
-    "@types/helmet": "0.0.45",
-    "@types/jest": "^26.0.15",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.164",
-    "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@types/validator": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
+    "@types/express": "^4.17.11",
+    "@types/express-rate-limit": "^5.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/lodash": "^4.14.168",
+    "@types/mongoose": "^5.10.5",
+    "@types/node": "^14.14.41",
+    "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-typescript": "^3.0.0",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.1",
-    "nodemon": "^2.0.6",
-    "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-node": "^9.0.0",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.2.4"
   }
 }
