--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "cross-env NODE_ENV=production node dist/app.js",
     "watch": "cross-env NODE_ENV=development nodemon",
     "debug": "cross-env NODE_ENV=development nodemon --config nodemon-debug.json",
-    "lint": "tsc --noEmit && eslint --fix .",
+    "lint": "tsc --project tsconfig.json --noEmit && eslint --fix .",
     "test": "cross-env NODE_ENV=test jest --forceExit",
     "test:coverage": "cross-env NODE_ENV=test jest --forceExit --coverage",
     "test:watch": "cross-env NODE_ENV=test yarn run test --watchAll"
@@ -45,16 +45,16 @@
   "devDependencies": {
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.13.16",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
     "@types/bcrypt": "^3.0.1",
     "@types/bluebird": "^3.5.33",
-    "@types/express": "^4.17.11",
     "@types/express-rate-limit": "^5.1.1",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
-    "@types/mongoose": "^5.10.5",
     "@types/node": "^14.14.41",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.1.3",
